--- a/CSS/05-2.sesion5-bai2.css
+++ b/CSS/05-2.sesion5-bai2.css
@@ -3,8 +3,8 @@
     margin: 0px;
 }
 body {
-    padding: 10px;
-    margin: 10px;
+    padding: 10px 20px;
+    margin: 5px 10px;
 }
 
 h1 {
@@ -30,14 +30,11 @@ h3 {
 }
 
 .tittle {
-    border: 1px solid red;
-    height: 10%;
-    margin: 10px 10px;
+    padding: 0 10px;
+    margin: 10px 20px;
 }
 .content {
-    border: 1px solid green;
-    margin: 10px 10px;
-    position: center;
+    margin: 10px 15px;
 }
 .w20 {
     width: 20%;
@@ -50,7 +47,7 @@ h3 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items:start;
 }
 .col {
@@ -60,22 +57,38 @@ h3 {
 }
 
 .feat-item {
-    padding: 10px;
+    padding: 5px;
+    margin: 0 5px;
 }
 
 .input {
     width: 90%;
     height: 30px;
+    cursor: text;
+    text-align: left;
+    text-indent: 10px;
+    font-family: 'Times New Roman', Times, serif
 }
 .text {
     width: 90%;
     height: 90px;
+    padding: 10px 0;
+    cursor: text;
+    text-align: left;
+    text-indent: 10px;
+    text-size-adjust: auto;
+    font-family: 'Times New Roman', Times, serif
 }
 .button {
-    width: 150px;
-    height: 30px; 
+    display: block;
+    padding: 10px 20px; 
+    min-width: 10px;
     background-color: rgb(29, 166, 132); 
     color: rgba(255, 255, 255, 0.829);
+    cursor: pointer;
+}
+.button:hover {
+    opacity: 0.8;
 }
 
 .box {
@@ -83,11 +96,13 @@ h3 {
     border-radius: 2px;
 }
 .mar1 {
-    margin: 5px 10px;
+    margin: 5px 5px;
 }
 .mar2 {
-    margin: 10px 20px;
+    margin: 10px 5px;
 }
+
+
 @media (max-width:768px) {
     .w20 {width: 50%;}
     .w70 {width: 50%;}
@@ -100,6 +115,6 @@ h3 {
     .w20 {width: 10%;}
     .w70 {width: 10%;}
     .row {
-        justify-content: center;
+        flex-direction: column;
     }  
 }
